# RDG

./: LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  test.py
src/randdg/: __init__.py  __main__.py  randdg.py
